# mlx-week-4

./: .env.example  .gitignore  EVALUATION_STRATEGIES.md  README.md  fix_wandb.py  launch_sweep.py  pyproject.toml  run_manual_experiments.py  runs.sh  setup.sh  sweep.yml  sweep_agent.py  test_model_qwen_random.py  test_wandb_connection.py
examples/: dataloader_example.py
notebooks/: task1.ipynb
scripts/: README.md  download_coco_captions.py  download_flickr30k.py  download_flickr8k.py
src/: __init__.py  debug_infer.py  evaluate.py  front_end.py  infer.py  inference_qwen.py  model_utils.py  save_to_hf.py  test_model.py  test_self_attn_fix.py  test_wandb_logging.py  train.py  train_backup.py  train_self.py  train_self_attn.py
src/data/: README.md  __init__.py  flickr_dataset.py
